--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -46,7 +46,8 @@ $colors: (
   blue:     #397bd5,
   white:    #fff,
   darkblue: #02006c,
-  lightdark:  #363636
+  lightdark:  #363636,
+  darkgreen: #060
 );
 
 
