--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 page-login {
     .login-optons {
         text-decoration: none;
-        color: #fff8dc;
+        //color: #fff8dc;
       }
       /* homescreen background image */
       .background {
@@ -29,8 +29,13 @@ page-login {
         background: rgba(255, 255, 255, 0.7);
       }
       button {
-        background: none !important;
-        background-color: none !important;
-        box-shadow: none !important;
+        border: 1px solid #949792;
+        border-radius: 50%;
+        display: inline-block;
+        height: 42px;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding: 10px;
+        width: 42px;
       }
 }
