Revised the code

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,9 +3,9 @@ page-login {
         text-decoration: none;
         //color: #fff8dc;
       }
-      /* homescreen background image */
+      /* home screen background image */
       .background {
-        background: url('../assets/imgs/login-bench-blueNew.png') no-repeat center
+        background: url('../assets/imgs/bench.jpeg') no-repeat center
           center fixed;
         filter: grayscale(50%);
         // filter: opacity(80%);
