--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,3 +1,15 @@
 page-settings {
-
+    .background{
+      background-color: #393937;
+      color:white;
+     }
+    .grey{
+      background-color:#A09999;
+    }
+    .darkrow{
+      background-color: grey;
+      line-height: 50px;
+      color: white;
+      font-size: 12pt;    
+    }
 }
