--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -50,7 +50,10 @@ $colors: (
   darkblue: #02006c,
   lightdark:  #363636,
   darkgreen: #060,
-  yellow: #ff0
+  yellow: #ff0,
+  DodgerBlue :#1E90FF,
+  parkBackground: #f2f7c0,
+  altParkBackground: #f9ebc2
 );
 
 
