--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 page-login {
     .login-optons {
         text-decoration: none;
-        //color: #fff8dc;
+        color: #fff;
       }
       /* home screen background image */
       .background {
@@ -37,5 +37,11 @@ page-login {
         margin-right: 10px;
         padding: 10px;
         width: 42px;
+      }
+      ion-grid{
+        .forget-register {
+          background:rgba(0, 0, 0, 0.5);
+          
+        }
       }
 }
