Updated background image in Login/Register/Forget pages

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -5,7 +5,7 @@ page-login {
       }
       /* home screen background image */
       .background {
-        background: url('../assets/imgs/bench.jpeg') no-repeat center
+        background: url('../assets/imgs/bench-building-colors.jpg') no-repeat center
           center fixed;
         filter: grayscale(50%);
         // filter: opacity(80%);
