--- a/src/pages/review/review.scss
+++ b/src/pages/review/review.scss
@@ -1,9 +1,7 @@
 page-review {
     .date{
       float: right;
-      padding-right: 16px;
-      padding-bottom: 13px;
-      padding-left: 16px;
+      padding: 0px 16px 13px 16px;
     }
     .card-background-page {
       background-color: #393937;
