created the page Profile and load the user data

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,6 +16,26 @@
 // automatically applied to the <body> element in the app.
 
 .active{
-    background-color:DodgerBlue;
+    background-color: lightgrey;
+    //color: black;
   }
+
+.toolbar-background {
+    background: dodgerblue;
+  }
+
+ .toolbar-title {
+    color: white;
+  }
+  
+  // .menu-style {
+  //   background-color: grey;
+  // }
+
+  // .item-md {
+  //   background-color: grey;
+  //   color: black;
+  // }
+
+
 
