--- a/src/pages/forget/forget.scss
+++ b/src/pages/forget/forget.scss
@@ -12,4 +12,8 @@ page-forget {
       //background-color: transparent;
       background: rgba(255, 255, 255, 0.7);
     }
+    .button-style {
+      border-radius: 10px;
+      border: 2px solid color($colors, white);
+    }
   }
