--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,12 +1,21 @@
 page-home {
+  ion-header {
+    ion-row{
+      background-color: #393937;
+      color: white;
+      ion-col {
+        height: 60px;
+        p {
+          margin: 5px 0;
+        }
+      }      
+    }
+  }
   .list-ios{
     margin-bottom: 5px;
   }
-  .searchIcon{
-    margin-left: 15px;
-    color: white;
-  }
     .card-background-page {
+        //margin-top: 20px;
         background-color: #393937;
         ion-card {
           position: relative;
@@ -18,6 +27,14 @@ page-home {
             max-width: 800px;
             height: 110px;
           }
+
+          // .img-bg {
+          //   background-image:black;
+          //   width: 800px;
+          //   height: 110px;
+          //   background-position: center;
+          //   position: relative;
+          // }
     
           .card-title {
             position: absolute;
@@ -26,6 +43,7 @@ page-home {
             width: 100%;
             font-weight: bold;
             color: #fff;
+            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
           }
       
           .card-subtitle {
