--- a/src/pages/search-result/search-result.scss
+++ b/src/pages/search-result/search-result.scss
@@ -17,7 +17,8 @@ page-search-result {
             font-size: 2em;
             width: 100%;
             font-weight: bold;
-            color: #fff;          
+            color: #fff;
+            text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
           }
         }    
         .card-subtitle {
@@ -32,8 +33,8 @@ page-search-result {
         position: absolute;
         text-align: center;
         color: #fff;
-        font-size: 1em;
-        font-weight: bold;
+        font-size: 10pt;
+        //font-weight: bold;
         width: 100%;
       }
 }
