--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -4,7 +4,8 @@ page-settings {
       color:white;
      }
     .grey{
-      background-color:#A09999;
+      background-color:rgb(196, 192, 192);
+      color: blue;
     }
     .darkrow{
       background-color: grey;
