--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -64,15 +64,17 @@ page-profile {
 
       .list-header {
         border-top: none;
+        margin-bottom: 0px;
       }
 
       .favNotFound {
         position: absolute;
         text-align: center;
         color: #fff;
-        font-size: 10pt;
+        font-size: 12pt;
         font-weight: bold;
         width: 100%;
+        margin-top: 20px;
       }
     
   }
