--- a/src/pages/review/review.scss
+++ b/src/pages/review/review.scss
@@ -16,9 +16,10 @@ page-review {
       position: absolute;
       text-align: center;
       color: #fff;
-      font-size: 1em;
+      font-size: 12pt;
       font-weight: bold;
       width: 100%;
+      margin-top: 20px;
     }
   }
   
