--- a/src/pages/search-result/search-result.scss
+++ b/src/pages/search-result/search-result.scss
@@ -33,8 +33,9 @@ page-search-result {
         position: absolute;
         text-align: center;
         color: #fff;
-        font-size: 10pt;
-        //font-weight: bold;
+        font-size: 12pt;
+        font-weight: bold;
         width: 100%;
+        margin-top: 20px;
       }
 }
